# CH32V303CBT6_Template

./: .clang-format  .cproject  .gitignore  .project  .template  CH32V303CBT6_Template.launch  CH32V303CBT6_Template.wvproj  CMakeLists.txt  README.md
Debug/: debug.c
Peripheral/inc/: ch32v30x_eth.h
User/: main.cpp
cmake/: gcc-risc-v32.cmake
cmake/CH32V30xLib/: CMakeLists.txt
